src/test/compile-fail/missing-return.rs
// xfail-stage0
// xfail-stage1
// xfail-stage2
// error-pattern: return

fn f() -> int {
}

fn main() {
  f();
}

